--- a/requirements_nano.txt
+++ b/requirements_nano.txt
@@ -1,9 +1,8 @@
 keras==2.3.1
 imutils==0.5.3
-numpy==1.18.2
+#numpy==1.18.2
 argparse==1.1
-scipy==1.4.1
-scikit-learn==0.23.1
-pillow==7.2.0
-streamlit==0.62.0
+scipy
+scikit-learn
+pillow
 flask
