--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -3,4 +3,5 @@ FROM tensorflow/tensorflow:1.15.2-py3
 
 COPY ./requirements.txt .
 RUN apt update & apt upgrade -y
+RUN /usr/bin/python3 -m pip install --upgrade pip
 RUN pip install -r requirements.txt
