adjustment to dockerfile

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -2,6 +2,6 @@
 FROM tensorflow/tensorflow:1.15.2-py3
 
 COPY ./requirements.txt .
-RUN apt update & apt upgrade -y
+RUN apt update -y && apt install git -y
 RUN /usr/bin/python3 -m pip install --upgrade pip
 RUN pip install -r requirements.txt
