--- a/.devcontainer/requirements.txt
+++ b/.devcontainer/requirements.txt
@@ -2,7 +2,7 @@ tensorflow==1.15.3
 keras==2.3.1
 imutils==0.5.3
 numpy==1.18.2
-opencv-python==4.2.0.*
+python3-opencv==4.1.1.*
 matplotlib==3.2.1
 argparse==1.1
 scipy==1.4.1
